--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
 <h2>Results:</h2>
 <ul>
 <li *ngFor="let recipe of recipes">
-{{ recipe.label || recipe.title || recipe.name }}
+{{ recipe.label || recipe.title || recipe.name || recipe.strMeal }}
 </li>
 </ul>
 </div>
