--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,20 +1,38 @@
-.overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 1000;
-  }
-  
-  .overlay-content {
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 5px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    text-align: center;
-  }
+@import "https://cdn.jsdelivr.net/npm/bulma@1.0.2/css/bulma.min.css";
+
+:root {
+--bulma-body-background-color: #FEFCF8;
+}
+
+.navbar {
+--bulma-navbar-h: 255;
+--bulma-navbar-s: 50%;
+--bulma-navbar-background-color: #ECECFF;
+--bulma-navbar-box-shadow-color: #E0E0E6;
+--bulma-navbar-hover: #ECECFF;
+--bulma-navbar-item-hover-background-l-delta: 80%;
+--bulma-navbar-item-color: black;
+--bulma-navbar-height: 6em;
+}
+
+.custom-search-input {
+width: 700px;
+color: #333;
+background-color: #f0f0f0;
+border-style: inset;
+border-color:#b4b4b4;
+}
+
+.custom-search-input::placeholder {
+color: #aaa;
+opacity: 1;
+}
+
+
+/* Custom styles for the search button */
+.custom-search-button {
+background-color: #A085AB;
+color: white;
+border: #A085AB;
+height: 40px;
+}
